k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kii-project
  labels:
    name: kii-project
