k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-dump
              mountPath: /docker-entrypoint-initdb.d/dump.sql
              subPath: dump.sql
      volumes:
        - name: db-dump
          configMap:
            name: db-dump-config
            items:
              - key: dump.sql
                path: dump.sql
