k8s/spingboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-api
  template:
    metadata:
      labels:
        app: springboot-api
    spec:
      containers:
        - name: springboot-api
          image: lazarpanov/backend:latest
          ports:
            - containerPort: 8080
