k8s/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: kii-project
spec:
  selector:
    app: springboot-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
