k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    -  host: kii-project.com
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: springboot-service
                 port:
                   number: 8080
